Updated Jupyter Notebook

--- a/HomeWork.ipynb
+++ b/HomeWork.ipynb
@@ -1162,9 +1162,6 @@
     }
    ],
    "source": [
-    "from IPython.display import clear_output\n",
-    "\n",
-    "# Ask the user four bits of input: Do you want to : Show/Add/Delete or Quit?\n",
     "my_list = {}\n",
     "\n",
     "def add_item():\n",
@@ -1172,12 +1169,18 @@
     "    print(\"\\nTo stop adding type: 'quit'\")\n",
     "    while shopping:\n",
     "        item = input('\\nWhat would you like to add? ')\n",
-    "        item = item.lower()\n",
+    "        item = item.lower().strip()\n",
     "        if item != 'quit':\n",
-    "            if item not in my_list:\n",
-    "                my_list[item] = 1\n",
+    "            number = input(f'\\nHow many {item}s would you like to add: ')\n",
+    "            if number.lower() == 'quit':\n",
+    "                print(f\"\\nNo {item}s added\")\n",
+    "                shopping = False\n",
     "            else:\n",
-    "                my_list[item] += 1\n",
+    "                number = int(number)\n",
+    "                if item not in my_list:\n",
+    "                    my_list[item] = number\n",
+    "                else:\n",
+    "                    my_list[item] += number\n",
     "        else:\n",
     "            shopping = False\n",
     "\n",
@@ -1186,7 +1189,7 @@
     "    print(\"To stop deleting type: 'quit'\")\n",
     "    while deleting:\n",
     "        item = input('\\nWhat would you like to remove? ')\n",
-    "        item = item.lower()\n",
+    "        item = item.lower().strip()\n",
     "        if item == 'quit':\n",
     "            deleting = False\n",
     "            print('\\nItem(s) removed')\n",
@@ -1194,9 +1197,20 @@
     "            if item not in my_list:\n",
     "                print('\\nMaybe try deleting somthing you actually have....moron')\n",
     "            else:\n",
-    "                my_list[item] -= 1\n",
-    "                if item == 0:\n",
-    "                    del my_list[item]\n",
+    "                number = input(f'\\nHow many {item}s would you like to remove: ')\n",
+    "                if number.lower() == 'quit':\n",
+    "                    print(f\"\\nNo {item}s removed\")\n",
+    "                    deleting = False\n",
+    "                else:\n",
+    "                    number = int(number)\n",
+    "                    if number > my_list[item]:\n",
+    "                        print(f\"\\nYou only had {my_list[item]} {item}s in your cart,\\nso we removed them all\")\n",
+    "                        del my_list[item]\n",
+    "                    else:\n",
+    "                        my_list[item] -= number\n",
+    "                        print(f'\\nYou now have {my_list[item]} {item}(s)')\n",
+    "                        if item == 0:\n",
+    "                            del my_list[item]\n",
     "\n",
     "def show_list():\n",
     "    print(\"Your Shopping list: \")\n",
@@ -1240,7 +1254,7 @@
     "def shop_list():\n",
     "    shopping = True\n",
     "    while shopping:\n",
-    "        do = input('\\nWould you like to see/add/delete or checkout: ')\n",
+    "        do = input('\\nWould you like to see/add/delete/checkout: ')\n",
     "        if do == 'add':\n",
     "            add_item()\n",
     "        elif do == 'delete':\n",
